--- a/assets/style.css
+++ b/assets/style.css
@@ -127,13 +127,11 @@
   border-radius: 50%;
   margin-right: 15px;
 }
-.main__features img {
+.main__features--img {
 display: inline-block;
-width: 40px;
-height: 40px;
 vertical-align: bottom;
 position: absolute;
-top: -15px;
+top: -7px;
 }
 .main__feature {
   display: block;
@@ -142,12 +140,63 @@ top: -15px;
   text-transform: uppercase;
   text-align: center;
 }
+.main__features--img-big {
+  position: absolute;
+  top: -20px;
+}
+/*Form*/
 .main__form {
   width: 370px;
   height: 440px;
   background-color: #fff;
   border-radius: 5%;
+  padding: 40px 50px;
 }
+.main__form p {
+  text-align: center;
+  color: rgba(209,209,209,255);
+}
+.main__heading {
+  font-size: 18px;
+  text-align: center;
+  color: rgba(51,51,51,255);
+}
+.main__heading span {
+display: block;
+text-transform: uppercase;
+font-weight: 700;
+margin-top: 15px;
+margin-bottom: 40px;
+}
+input[type=text] {
+width: 268px;
+height: 60px;
+font-size: 16px;
+text-align: center;
+border: 2px solid rgba(209,209,209,255);
+border-radius: 6%;
+margin-bottom: 20px;
+}
+input[type=phone] {
+width: 268px;
+height: 60px;
+font-size: 16px;
+text-align: center;
+border: 2px solid rgba(209,209,209,255);
+border-radius: 6%;
+margin-bottom: 20px;
+}
+.main__button {
+width: 268px;
+height: 60px;
+font-size: 16px;
+text-align: center;
+border-radius: 6%;
+margin-bottom: 20px;
+text-transform: uppercase;
+font-weight: 700;
+}
+
 /*Selection glazing*/
 .selection {
   height: 300px;
