--- a/assets/zeroingStyle.css
+++ b/assets/zeroingStyle.css
@@ -14,6 +14,7 @@ a:focus,a:active{outline: none;}
 nav,footer,header,aside{display: block;}
 
 html,body{
+	font-size: 10px;
 	height: 100%;
 	width: 100%;
 	font-size: 100%;
@@ -22,6 +23,15 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+}
+body {
+	width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+	font-family: 'Open Sans', sans-serif;
+}
+a {
+		font-family: 'Trebuchet MS', sans-serif;
 }
 input,button,textarea{font-family:inherit;}
 
@@ -36,6 +46,22 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 .container {
-	width: 1170px;
+  max-width: 1170px;
   margin: 0 auto;
+}
+
+@media(max-width: 1200px) {
+.container {
+	max-width: 970px;
+}
+p.header__city {
+	display: none;
+}
+.header__row {
+	display: flex;
+	justify-content: space-between;
+}
+div.photowork__substrate {
+	display: none;
+}
 }
